--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x128.png" type="image/x-icon">
   <meta name="description" content="The Stark Global Initiative is a domestic non-profit think tank centered around disrupting humanity for the better. They are a philanthropic subsidiary of the Stark Drones Corporation.">
-  
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17589990572"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-17589990572'); </script>
   
   <title>SGI</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
