Integrate Google Analytics gtag.js
Added Google Analytics gtag.js script for tracking.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-P7J2HRCW');</script>
   <!-- End Google Tag Manager -->
-
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F0YXJ7JP72"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F0YXJ7JP72');
+  </script>
+  
   <script>
   function gtag_report_conversion(url) {
     var callback = function () {
